# input-method-monitor

./: .gitignore  BUILD.md  CMakeLists.txt  buildfile  configuration.cpp  configuration.h  constants.h  kbdlayoutmon.config  kbdlayoutmon.cpp  kbdlayoutmonhook.cpp  log.cpp  log.h  manifest  manifest.xml  readme.md  todo.md
.github/workflows/: build.yml  run-tests.yml
resources/: res-icon.h  res-icon.rc  res-versioninfo.rc
scripts/: run_tests.bat  run_tests.sh  sc-compile.bat  sc-debug-full.bat  sc-del-dist.bat  sc-del-etc.bat  sc-killapp.bat  sc-taildebug-cur.bat  sc-taildebug.bat
source/: app_state.cpp  app_state.h  cli_utils.cpp  cli_utils.h  config_parser.cpp  config_parser.h  config_watcher.cpp  config_watcher.h  config_watcher_posix.cpp  config_watcher_posix.h  configuration.cpp  configuration.h  constants.h  handle_guard.h  hotkey_cli.cpp  hotkey_cli.h  hotkey_registry.cpp  hotkey_registry.h  kbdlayoutmon.cpp  kbdlayoutmonhook.cpp  log.cpp  log.h  tray_icon.cpp  tray_icon.h  unique_handle.h  utils.cpp  utils.h  winreg_handle.h
tests/: bench_pipe.cpp  catch_main.cpp  config_parser.h  run_temp_enable.cpp  shlwapi.h  strsafe.h  stubs.cpp  test_config_watcher.cpp  test_config_watcher_impl.cpp  test_config_watcher_posix.cpp  test_configuration.cpp  test_file_io.cpp  test_file_io.h  test_hotkey_registry.cpp  test_hotkey_registry_impl.cpp  test_log.cpp  test_logging.cpp  test_runtime_helpers.cpp  test_timer_guard.cpp  test_tray_icon.cpp  test_tray_icon_integration.cpp  test_tray_icon_update.cpp  test_unknown_option.cpp  test_utils.cpp  test_worker_thread.cpp  windows.h  windows_stub.h
